@@ -4,6 +4,8 @@ bzr-0.0.1  NOT RELEASED YET
 
     * More information from info command.
 
+    * Can now say "bzr help COMMAND" for more detailed help.
+
   PORTABILITY:
 
     * Include a subset of ElementTree-1.2.20040618 to make
